JvmOptimizer boot rapido com G1GC heap heath reload